[package]
name = "perm-text"
version = "1.0.1"
authors = ["SimonGZ <simong@gmail.com>"]
edition = "2018"
description = "A simple tool for curling straight/dumb quotation marks (\"\") and apostrophes (') into their curly/smart (“”’) equivalents."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/SimonGZ/perm"
repository = "https://github.com/SimonGZ/perm"
keywords = ["cli", "text", "quotes", "apostrophes", "curly"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1"
